--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -12,13 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Import reduce from functools, numpy and pandas"
+    "# Import reduce from functools, numpy and pandas\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import functools"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +65,8 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n"
    ]
   },
   {
